Openstack theme fix utility block overlap
Fix the utility block overlap css issue that prevented click on
the user name or other elements in header.

--- a/themes/openstack/sass/custom.scss
+++ b/themes/openstack/sass/custom.scss
@@ -116,8 +116,8 @@ h3{
 /** UTILITY LINKS **/
 
 .block-commons-utility-links {
+  text-align: right;
   ul {
-    float: right;
     padding: 0;
     margin: 0;
     display: inline-block;
